# ObjectDetection

./: .gitignore  LICENSE  README.md
pylc/: CMakeLists.txt  pylc.py  setup.sh  transformations.py
pylc/data/: depth_image.npy  design_points.npy  rgb_image.npy
pylc/src/pylc_lib/: converters.hpp  pylc_lib.cpp  sim_class.hpp  spline_class.hpp
second/: create_data.py  launch_all_exp.py  sbatch.py
second/builder/: dataset_builder.py
second/core/: camera_transforms.py
second/data/: __init__.py  dataset.py  kitti_dataset.py  preprocess.py  synthia_common.py  synthia_dataset.py  vkitti_common.py  vkitti_dataset.py
second/data/SynthiaImageSets/: test.txt  test_2k_subset.txt  test_random_subset.txt  train.txt  train_random_subset.txt
second/data/VKittiImageSets/: idx2metadata.txt  test.txt  test_clone_only.txt  train.txt  train_random_subset.txt  train_tiny.txt
second/dynamic/data/: synthia.py
second/dynamic/devices/: __init__.py  detector.py  device.py  dp_optimizer.py  lidar.py  light_curtain.py  synthia.py
second/kittiviewer/backend/: main.py
second/kittiviewer/frontend/: index.html
second/light_curtain/: acc_constraints_policy.py  policy.py  utils.py
second/protos/: input_reader.proto  input_reader_pb2.py  pipeline.proto  pipeline_pb2.py  train.proto  train_pb2.py
second/pytorch/: timetest.py  train.py
second/pytorch/builder/: input_reader_builder.py
second/sandbox/: kitti_depth_lc_vis.py
second/utils/: eval.py  log_tool.py
second/vis/: metrics.py  plotter.py  spec.yaml  tb_csvs_to_json.py  timestats_plot.py
(+49 files in other folders)
